--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@reduxjs/toolkit": "^2.2.3",
     "@tabler/icons-react": "^3.1.0",
+    "@types/uuid": "^9.0.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
@@ -70,6 +71,7 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "timeago.js": "^4.0.2",
+    "uuid": "^9.0.1",
     "vaul": "^0.9.0",
     "yup": "^1.4.0",
     "zod": "^3.22.4"
